# ArenaMind-AI

./: .env.example  .gitignore  AI_PROVIDER_MONGODB_SETUP.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  INSTRUCTIONS.md  README.md  SCORING.md  SECURITY.md  TESTING.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  config.py  main.py  schemas.py  security.py  services.py
apps/api/tests/: test_api.py
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  motion.css  page.tsx
apps/web/src/components/: components.test.tsx  copilot-panel.tsx  crowd-chart.tsx  dashboard.test.tsx  dashboard.tsx  domain-brief.tsx  incident-row.tsx  language-selector.tsx  login-screen.tsx  metric-card.tsx  notifications-panel.tsx  panel-title.tsx  providers.tsx  resource-readiness.tsx
apps/web/src/hooks/: use-websocket.ts
apps/web/src/lib/: api.ts  translations.ts
apps/web/src/test/: setup.ts
infra/: nginx.conf
