[project]
name = "arenamind-api"
version = "1.0.0"
description = "ArenaMind AI — GenAI-powered stadium operations API for FIFA World Cup 2026"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "S",    # flake8-bandit (security)
  "T20",  # flake8-print
  "SIM",  # flake8-simplify
  "RUF",  # Ruff-specific rules
]
ignore = [
  "E501",  # Line length enforced per-context; long content strings are exempt
  "S104",  # Possible binding to all interfaces
  "S105",  # Hardcoded password variable (dev defaults)
  "S106",  # Hardcoded password in function arg (dev defaults)
  "B008",  # Do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "B017"]  # assert and broad pytest.raises are standard in tests

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
